--- a/gb/19/12/9/n11709977.md
+++ b/gb/19/12/9/n11709977.md
@@ -1,57 +1,60 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/rywys229/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/rywys229/www/master/t/djy/1.jpg" title="´ó¼ÍÔª"></a><a href="https://github.com/rywys229/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/rywys229/www/master/t/djy/3.jpg" title="¹ú¼ÊÐÂÎÅ"></a><a href="https://github.com/rywys229/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/rywys229/www/master/t/djy/4.jpg" title="´óÂ½ÐÂÎÅ"></a><a href="https://github.com/rywys229/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/rywys229/www/master/t/djy/5.jpg" title="ÆÀÂÛ"></a><a href="https://github.com/rywys229/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/rywys229/www/master/t/djy/6.jpg" title="ÎÄ»¯"></a><a href="https://github.com/rywys229/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/rywys229/www/master/t/djy/7.jpg" title="Éú»î"></a><a href="https://github.com/rywys229/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/rywys229/www/master/t/djy/8.jpg" title="ÓéÀÖ"></a><a href="https://github.com/rywys229/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/rywys229/www/master/t/djy/9.jpg" title="½¡¿µ"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/rywys229/www/master/t/djy/10.jpg" title="¹ºÎï"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/rywys229/www/master/t/djy/12.jpg" title="¾è¿î"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/rywys229/djy/blob/master/gb/9p.md#1">ÉçÂÛ</a> | <a target="_blank" href="https://github.com/rywys229/djy/blob/master/gb/nf5657.md#1">ÈýÍË</a> | <a target="_blank" href="https://github.com/rywys229/djy/blob/master/gb/nf6123.md#1">Ëß½­</a> | <a target="_blank" href="https://github.com/rywys229/djy/blob/master/gb/nf1176117.md#1">ÖÐ¹²Âô¹ú</a> | <a target="_blank" href="https://github.com/rywys229/djy/blob/master/gb/nf5773.md#1">Ì°¸¯ÒùÂÒ</a> | <a target="_blank" href="https://github.com/rywys229/djy/blob/master/gb/nf1176115.md#1">´Ü¸ÄÀúÊ·</a> | <a target="_blank" href="https://github.com/rywys229/djy/blob/master/gb/nf1176107.md#1">µ³¿ý»­Æ¤</a> | <a target="_blank" href="https://github.com/rywys229/djy/blob/master/gb/nf1320400.md#1">ÖÐ¹²¼äµý</a> | <a target="_blank" href="https://github.com/rywys229/djy/blob/master/gb/nf1176114.md#1">ÆÆ»µ´«Í³</a> | <a target="_blank" href="https://github.com/rywys229/djy/blob/master/gb/nf5287.md#1">¶ñ¹áÂúÓ¯</a> | <a target="_blank" href="https://github.com/rywys229/djy/blob/master/gb/ncid278.md#1">ÈËÈ¨</a> | <a target="_blank" href="https://github.com/rywys229/djy/blob/master/gb/nf1176111.md#1">ÆÈº¦</a> | <a target="_blank" href="https://github.com/rywys229/djy/blob/master/gb/nf1235328.md#1">Êé¼®</a> | <a target="_blank" href="https://github.com/rywys229/www/blob/master/README.md?zsrh#1">·­Ç½</a></p><p><a target="_blank" href="https://github.com/rywys229/djy/blob/master/gb/nf5562.md#1">Î±»ð</a> | <a target="_blank" href="https://github.com/rywys229/djy/blob/master/gb/nf4378.md#1">ÎÊ´ð</a> | <a target="_blank" href="https://github.com/rywys229/djy/blob/master/gb/nf5792.md#1">ÆÊÎö</a> | <a target="_blank" href="https://github.com/rywys229/djy/blob/master/gb/nf5735.md#1">Á½°¶±È¶Ô</a> | <a target="_blank" href="https://github.com/rywys229/djy/blob/master/gb/nf6119.md#1">¸÷¹ú°ý½±</a> | <a target="_blank" href="https://github.com/rywys229/djy/blob/master/gb/nf6120.md#1">ÃñÖÚÉùÔ®</a> | <a target="_blank" href="https://github.com/rywys229/djy/blob/master/gb/nf1188594.md#1">ÄÑÍü¼ÇÒä</a> | <a target="_blank" href="https://github.com/rywys229/djy/blob/master/gb/nf3180.md#1">º£Íâºë´«</a> | <a target="_blank" href="https://github.com/rywys229/djy/blob/master/gb/nf5410.md#1">ÍòÈËÉÏ·Ã</a> | <a target="_blank" href="https://github.com/rywys229/ntdtv/blob/master/gb/prog1530_1.md#1">ºÍÆ½¿¹Òé</a> | <a target="_blank" href="https://github.com/rywys229/djy/blob/master/gb/nf4386.md#1">Ö§³Ö</a> | <a target="_blank" href="https://github.com/rywys229/djy/blob/master/gb/nf4389.md#1">ÕæÏà</a> | <a target="_blank" href="https://github.com/rywys229/djy/blob/master/gb/nf5790.md#1">Ê¥Ôµ</a> | <a target="_blank" href="https://github.com/rywys229/djy/blob/master/gb/nf4786.md#1">ÉñÔÏ</a></td></tr>
-<tr><td VALIGN=TOP width="626"><h2 align=center>¸ßÁä½ÌÑøº¢×ÓÀÛÈË ÖÓÐÀÁè·ÖÏíÁ½´óÊØÔò</h2>
-<img src="http://i.epochtimes.com/assets/uploads/2019/12/1912090106401487-600x400.jpg" />
-<h6>ÖÓÐÀÁèÓÚ12ÔÂ7ÈÕÔÚ¶ùÍ¯½ÚÄ¿¡¶°¢ÆæÓ×Ó×Ô°¡·ÎåËêÉúÈÕ¼ûÃæ»áÉÏ½ÓÊÜ¡°°¢ÆæÔ°³¤¡±µÄÃæÊÔ£¬ÌôÕ½µ£ÈÎÒ»ÈÕÓ×Ó×Ô°ÀÏÊ¦¡££¨ÆëÊ¯´«²¥Ìá¹©£©
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/tcgkzq3248/www/master/t/djy/1.jpg" title="å¤§çºªå…ƒé¦–é¡µ" alt="å¤§çºªå…ƒé¦–é¡µ"></a><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/tcgkzq3248/www/master/t/djy/3.jpg" title="å›½é™…æ–°é—»" alt="å›½é™…æ–°é—»"></a><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/tcgkzq3248/www/master/t/djy/4.jpg" title="å¤§é™†æ–°é—»" alt="å¤§é™†æ–°é—»"></a><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/tcgkzq3248/www/master/t/djy/5.jpg" title="å¤§çºªå…ƒè¯„è®º" alt="å¤§çºªå…ƒè¯„è®º"></a><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/tcgkzq3248/www/master/t/djy/6.jpg" title="ä¼ ç»Ÿæ–‡åŒ–" alt="ä¼ ç»Ÿæ–‡åŒ–"></a><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/tcgkzq3248/www/master/t/djy/7.jpg" title="ç”Ÿæ´»æ¶ˆè´¹" alt="ç”Ÿæ´»æ¶ˆè´¹"></a><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/tcgkzq3248/www/master/t/djy/8.jpg" title="å¨±ä¹ä¼‘é—²" alt="å¨±ä¹ä¼‘é—²"></a><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/tcgkzq3248/www/master/t/djy/9.jpg" title="å¥åº·" alt="å¥åº·"></a><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/tcgkzq3248/www/master/t/djy/10a.jpg" title="ç‹¬å®¶" alt="ç‹¬å®¶"></a><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/tcgkzq3248/www/master/t/djy/12a.jpg" title="å¤´æ¡è¦é—»" alt="å¤´æ¡è¦é—»"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/tcgkzq3248/www/blob/master/README.md?zsrh#1">ç¿»å¢™</a> | <a target="_blank" href="https://github.com/tcgkzq3248/djy/blob/master/gb/nf5657.md#1">ä¸‰é€€</a> | <a target="_blank" href="https://github.com/tcgkzq3248/djy/blob/master/gb/nf6124.md#1">è¯‰æ±Ÿ</a> | <a target="_blank" href="https://github.com/tcgkzq3248/djy/blob/master/gb/nf1176117.md#1">ä¸­å…±å–å›½</a> | <a target="_blank" href="https://github.com/tcgkzq3248/djy/blob/master/gb/nf5773.md#1">è´ªè…æ·«ä¹±</a> | <a target="_blank" href="https://github.com/tcgkzq3248/djy/blob/master/gb/nf1176115.md#1">çªœæ”¹åŽ†å²</a> | <a target="_blank" href="https://github.com/tcgkzq3248/djy/blob/master/gb/nf1176107.md#1">å…šé­ç”»çš®</a> | <a target="_blank" href="https://github.com/tcgkzq3248/djy/blob/master/gb/nf1320400.md#1">ä¸­å…±é—´è°</a> | <a target="_blank" href="https://github.com/tcgkzq3248/djy/blob/master/gb/nf1176114.md#1">ç ´åä¼ ç»Ÿ</a> | <a target="_blank" href="https://github.com/tcgkzq3248/ntdtv/blob/master/gb/prog447_1.md#1">æ¶è´¯æ»¡ç›ˆ</a> | <a target="_blank" href="https://github.com/tcgkzq3248/djy/blob/master/gb/ncid278.md#1">äººæƒ</a> | <a target="_blank" href="https://github.com/tcgkzq3248/djy/blob/master/gb/nf1176111.md#1">è¿«å®³</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">æœŸåˆŠ</a> | <a target="_blank" href="https://github.com/tcgkzq3248/djy/blob/master/gb/nf5562.md#1">ä¼ªç«</a></p><p><a target="_blank" href="https://github.com/tcgkzq3248/djy/blob/master/gb/9p.md#1">ç¤¾è®º</a> | <a target="_blank" href="https://github.com/tcgkzq3248/djy/blob/master/gb/nf4378.md#1">é—®ç­”</a> | <a target="_blank" href="https://github.com/tcgkzq3248/djy/blob/master/gb/nf5792.md#1">å‰–æž</a> | <a target="_blank" href="https://github.com/tcgkzq3248/djy/blob/master/gb/nf5735.md#1">ä¸¤å²¸æ¯”å¯¹</a> | <a target="_blank" href="https://github.com/tcgkzq3248/djy/blob/master/gb/nf6119.md#1">å„å›½è¤’å¥–</a> | <a target="_blank" href="https://github.com/tcgkzq3248/djy/blob/master/gb/nf6120.md#1">æ°‘ä¼—å£°æ´</a> | <a target="_blank" href="https://github.com/tcgkzq3248/djy/blob/master/gb/nf1188594.md#1">éš¾å¿˜è®°å¿†</a> | <a target="_blank" href="https://github.com/tcgkzq3248/djy/blob/master/gb/nf3180.md#1">æµ·å¤–å¼˜ä¼ </a> | <a target="_blank" href="https://github.com/tcgkzq3248/djy/blob/master/gb/nf5410.md#1">ä¸‡äººä¸Šè®¿</a> | <a target="_blank" href="https://github.com/tcgkzq3248/www/blob/master/README.md?zsrh#1">å¹³å°é¦–é¡µ</a> | <a target="_blank" href="https://github.com/tcgkzq3248/djy/blob/master/gb/nf4386.md#1">æ”¯æŒ</a> | <a target="_blank" href="https://github.com/tcgkzq3248/djy/blob/master/gb/nf4389.md#1">çœŸç›¸</a> | <a target="_blank" href="https://github.com/tcgkzq3248/djy/blob/master/gb/nf5790.md#1">åœ£ç¼˜</a> | <a target="_blank" href="https://github.com/tcgkzq3248/djy/blob/master/gb/nf4786.md#1">ç¥žéŸµ</a></td></tr>
+<tr><td VALIGN=TOP width="626"><h2 align=center>é«˜é¾„æ•™å…»å­©å­ç´¯äºº é’Ÿæ¬£å‡Œåˆ†äº«ä¸¤å¤§å®ˆåˆ™</h2>
+<img width="600" src="https://i.epochtimes.com/assets/uploads/2019/12/1912090106401487-600x400.jpg" />
+<h6>é’Ÿæ¬£å‡ŒäºŽ12æœˆ7æ—¥åœ¨å„¿ç«¥èŠ‚ç›®ã€Šé˜¿å¥‡å¹¼å¹¼å›­ã€‹äº”å²ç”Ÿæ—¥è§é¢ä¼šä¸ŠæŽ¥å—â€œé˜¿å¥‡å›­é•¿â€çš„é¢è¯•ï¼ŒæŒ‘æˆ˜æ‹…ä»»ä¸€æ—¥å¹¼å¹¼å›­è€å¸ˆã€‚ï¼ˆé½çŸ³ä¼ æ’­æä¾›ï¼‰
 </h6>
 <hr>
-<p>¡¾´ó¼ÍÔª2019Äê12ÔÂ09ÈÕÑ¶¡¿ÒÕÈË<a href="https://github.com/rywys229/djy/blob/master/gb/tag/%E9%92%9F%E6%AC%A3%E5%87%8C.md">ÖÓÐÀÁè</a>ÔÚ¡¶ÄãµÄº¢×Ó²»ÊÇÄãµÄº¢×Ó¡ª<a href="https://github.com/rywys229/djy/blob/master/gb/tag/%E7%8C%AB%E7%9A%84%E5%AD%A9%E5%AD%90.md">Ã¨µÄº¢×Ó</a>¡·ÖÐÊÎÑÝµÄ¼Ò³¤ÈÃÈËÓ¡ÏóÉî¿Ì£¬ÕâÒ²ÈÃËýÔÚ½ñÄêÒ»¾ÙÄÃÏÂ½ðÖÓÃÔÄã¾ç¼¯Å®Ö÷½Ç½±¡£Ôøµ£ÐÄÊÇ¸ßÁä²ú¸¾µÄËý£¬Ä¿Ç°ÓýÓÐÁ½Å®£¬µ«ËýÈÏÎª±ÈÆð¸ßÁä²ú¸¾£¬¡°¸ßÁä<a href="https://github.com/rywys229/djy/blob/master/gb/tag/%E6%95%99%E5%85%BB.md">½ÌÑø</a>¸ü¼ÓÀÛÈË£¬ËùÒÔÐèÒª¸ü´ÏÃ÷µÄ½ÌÑø·½Ê½¡±¡£</p>
-<p>ËýÎª×Ô¼º¶©¶¨¡°<a href="https://github.com/rywys229/djy/blob/master/gb/tag/%E6%95%99%E5%85%BB.md">½ÌÑø</a>Á½´óÊØÔò¡±£º¹ÄÀøÌ½Ë÷¡¢½±ÀøÍ»ÆÆ£¬Ï£ÍûÈÃº¢×ÓÃÇ×ÔÖ÷Ñ§Ï°£¬×Ô¼ºÒ²²»»á³ÉÎªÔÚÏ·¾çÖÐËùÚ¹ÊÍµÄ³ÉÌìÆøàÛàÛ¡¢²»¿ªÐÄµÄ¼Ò³¤¡£</p>
-<p><a href="https://github.com/rywys229/djy/blob/master/gb/tag/%E9%92%9F%E6%AC%A3%E5%87%8C.md">ÖÓÐÀÁè</a>µÄ´óÅ®¶ùÍÃ±¦Ä¿Ç°Õý¾Í¶ÁÐ¡Ñ§£¬Ëý±íÊ¾´ÓÏ·¾ç²¥³öºó£¬¶¼»áÓÐµãµ£ÐÄ°àÉÏÍ¬Ñ§¼Ò³¤³äÂú¹ØÇÐµÄÑÛÉñ£¬ÈÃËý²»½ûÒª´óÉùÎª×Ô¼º³ÎÇå£º¡°Ð»Ð»´ó¼Ò¿Ï¶¨ÎÒµÄÑÝ¼¼£¬²»¹ýÇ§Íò²»ÒªÎó»áÎÒÔÚÏ·Íâ¾ÍÊÇÕâÖÖ£¨¸øÐ¡º¢Ñ¹Á¦£©ÂèÂè£¡¡±</p>
-<p>Ëµµ½½ÌÑøº¢×Ó£¬ÖÓÐÀÁè±íÊ¾×Ô¼º¿ÉÊÇ¡°¼ÇÈ¡½ÌÑµ¡±ÇÒ¸úÉÏÊ±´ú½Å²½µÄÂèÂè¡£¡°»ØÏëÆðÐ¡Ê±ºòÑ§Ð£ÀÏÊ¦»áÕë¶Ô±íÏÖºÃµÄÑ§Éú¸øÓèÌùÖ½×÷Îª½±Àø¡±£¬ËýÒ²»¹¼ÇµÃ£¬Ð¡Ê±ºòµÄ×Ô¼ººÜ¿ÊÍû»ñµÃ¿Ï¶¨£¬ËÑ¼¯ÀÏÊ¦¸øµÄ¡°ÌùÖ½¡±¾ÍÊÇËý×î´óµÄ³É¾Í¸Ð¡£</p>
-<p>ËäÈ»ÓÐÈË·´¶ÔµçÊÓ¶ùÍ¯£¬µ«ËýÈÏÎªÑ¡ÔñÓÅÖÊµÄ½ÌÑø½ÚÄ¿À´Ð­Öú½ÌÓýº¢×ÓÊÇ¸öºÃ·½·¨¡£Ëý·ÖÏí×Ô¼ºÆ½Ê±¸úº¢×ÓÒ»ÆðÊÕ¿´¶ùÍ¯½ÚÄ¿¡¶<a href="https://github.com/rywys229/djy/blob/master/gb/tag/%E9%98%BF%E5%A5%87%E5%B9%BC%E5%B9%BC%E5%9B%AD.md">°¢ÆæÓ×Ó×Ô°</a>¡·£¬Ð¦Ëµ£º¡°ÓÐÐ©ÊÂÇéÎÒËµÃ÷ÆðÀ´¾ÍºÜ¸´ÔÓ£¬µ«ËýÃÇ»¨Ò»µãÊ±¼ä¿´Íê½ÚÄ¿¾ÍÁ¢¿Ì¶®ÁË£¬ÕâÑù²»ÊÇºÜºÃÂð£¿¶øÇÒ¸ú×ÅÒ»Æð¿´Ò²ºÜÓÐÊÕ»ñ£¬ËýÃÇÔÚÑ§Ï°£¬ÎÒÊÇ³Á½þÓ¢ÎÄµÄÊÀ½çÀï£¬Ò²ÊÇÂúÀËÂþµÄ°¡£¡¡±</p>
-<p>¡¶<a href="https://github.com/rywys229/djy/blob/master/gb/tag/%E9%98%BF%E5%A5%87%E5%B9%BC%E5%B9%BC%E5%9B%AD.md">°¢ÆæÓ×Ó×Ô°</a>¡·£¨HEY DUGGEE£©ÎªÓ¢¹úBBCÆìÏÂ¶ùÍ¯ÆµµÀCBeebiesÍÆ³öµÄ¶ùÍ¯½ÚÄ¿£¬Ô¢½ÌÓÚÀÖµÄÓÐÈ¤ÄÚÈÝ£¬¹ÄÀøÐ¡ÅóÓÑÍ¸¹ý²»Í¬·½Ê½Ö÷¶¯½â¾öÎÊÌâ£¬ÓÈÆä½ÚÄ¿×îºó£¬°¢ÆæÔ°³¤¶¼»áËÍ³öÑ«ÕÂ¸øÓ×Ó×Ô°µÄºÃÆæ±¦±¦ÃÇ£¬ÕâÈÃÖÓÐÀÁèÊÜµ½Æô·¢±íÊ¾£¬¡°Ô­À´³ýÁËËÍÌùÖ½Íâ£¬»¹¿ÉÒÔËÍ¸÷ÖÖ¡®³É¾ÍÑ«ÕÂ¡¯×÷Îª½±Àø£¡¡±</p>
-<p>ÎªÁË¸ú¸ü¶à¸¸Ä¸·ÖÏíËýµÄ½ÌÑøÐÄ·¨£¬ÖÓÐÀÁè7ÈÕÔÚ¡¶°¢ÆæÓ×Ó×Ô°¡·ÎåËêÉúÈÕ¼ûÃæ»áÉÏ½ÓÊÜ¡°°¢ÆæÔ°³¤¡±µÄÃæÊÔ£¬ÌôÕ½µ£ÈÎÒ»ÈÕÓ×Ó×Ô°ÀÏÊ¦¡£Ëý²»½ö¸ß·ÖÍ¨¹ý²âÊÔ£¬»¹´øÁìÐ¡ÅóÓÑÍ¨¹ý¿¼Ñé¡¢»ñµÃÑ«ÕÂ¡£</p>
-<figure id="attachment_11710094" style="width: 458px" class="wp-caption aligncenter"><a href="http://i.epochtimes.com/assets/uploads/2019/12/1912090106371487.jpg"><img class=" wp-image-11710094" title="" src="http://i.epochtimes.com/assets/uploads/2019/12/1912090106371487.jpg" alt="" width="458" b="667" /></a><figcaption class="wp-caption-text">ÖÓÐÀÁèÓÚ12ÔÂ7ÈÕÔÚ¶ùÍ¯½ÚÄ¿¡¶°¢ÆæÓ×Ó×Ô°¡·ÎåËêÉúÈÕ¼ûÃæ»áÉÏ½ÓÊÜ¡°°¢ÆæÔ°³¤¡±µÄÃæÊÔ£¬ÌôÕ½µ£ÈÎÒ»ÈÕÓ×Ó×Ô°ÀÏÊ¦¡££¨ÆëÊ¯´«²¥Ìá¹©£©</figcaption></figure>
-<p>µ±ÈÕ»î¶¯ÏÖ³¡µÄ°ÖÂèÃÇ¶¼±íÊ¾£¬Æ½³£ÔÚ¼Ò¶¼Òª¸úº¢×Ó¶··¨¡¢»¨·Ñ¿àÐÄÒýµ¼Ñ§Ï°£¬Ã»Ïëµ½ÖÓÐÀÁè¾¹È»Ò»ÏÂ¾ÍÕ÷·þº¢×Ó£¬¶®µÃÈçºÎÓë×Ô¼ºµÄÐ¡º¢Ïà´¦£¬¸ù±¾ÊÇ¡°±»ÑÝÔ±µ¢ÎóµÄ<a href="https://github.com/rywys229/djy/blob/master/gb/tag/%E5%9B%BD%E6%B0%91%E5%A6%88%E5%A6%88.md">¹úÃñÂèÂè</a>¡±¡£</p>
-<p>ÔðÈÎ±à¼­£ºÁºÃÎÖñ</p>
+	<p>ã€å¤§çºªå…ƒ2019å¹´12æœˆ09æ—¥è®¯ã€‘è‰ºäºº<ahref="https://github.com/tcgkzq3248/djy/blob/master/gb/tag/%E9%92%9F%E6%AC%A3%E5%87%8C.md#1">é’Ÿæ¬£å‡Œ</a>åœ¨ã€Šä½ çš„å­©å­ä¸æ˜¯ä½ çš„å­©å­â€”<ahref="https://github.com/tcgkzq3248/djy/blob/master/gb/tag/%E7%8C%AB%E7%9A%84%E5%AD%A9%E5%AD%90.md#1">çŒ«çš„å­©å­</a>ã€‹ä¸­é¥°æ¼”çš„å®¶é•¿è®©äººå°è±¡æ·±åˆ»ï¼Œè¿™ä¹Ÿè®©å¥¹åœ¨ä»Šå¹´ä¸€ä¸¾æ‹¿ä¸‹é‡‘é’Ÿè¿·ä½ å‰§é›†å¥³ä¸»è§’å¥–ã€‚æ›¾æ‹…å¿ƒæ˜¯é«˜é¾„äº§å¦‡çš„å¥¹ï¼Œç›®å‰è‚²æœ‰ä¸¤å¥³ï¼Œä½†å¥¹è®¤ä¸ºæ¯”èµ·é«˜é¾„äº§å¦‡ï¼Œâ€œé«˜é¾„<ahref="https://github.com/tcgkzq3248/djy/blob/master/gb/tag/%E6%95%99%E5%85%BB.md#1">æ•™å…»</a>æ›´åŠ ç´¯äººï¼Œæ‰€ä»¥éœ€è¦æ›´èªæ˜Žçš„æ•™å…»æ–¹å¼â€ã€‚</p>
+<p>å¥¹ä¸ºè‡ªå·±è®¢å®šâ€œ<ahref="https://github.com/tcgkzq3248/djy/blob/master/gb/tag/%E6%95%99%E5%85%BB.md#1">æ•™å…»</a>ä¸¤å¤§å®ˆåˆ™â€ï¼šé¼“åŠ±æŽ¢ç´¢ã€å¥–åŠ±çªç ´ï¼Œå¸Œæœ›è®©å­©å­ä»¬è‡ªä¸»å­¦ä¹ ï¼Œè‡ªå·±ä¹Ÿä¸ä¼šæˆä¸ºåœ¨æˆå‰§ä¸­æ‰€è¯ é‡Šçš„æˆå¤©æ°”å™—å™—ã€ä¸å¼€å¿ƒçš„å®¶é•¿ã€‚</p>
+<p><ahref="https://github.com/tcgkzq3248/djy/blob/master/gb/tag/%E9%92%9F%E6%AC%A3%E5%87%8C.md#1">é’Ÿæ¬£å‡Œ</a>çš„å¤§å¥³å„¿å…”å®ç›®å‰æ­£å°±è¯»å°å­¦ï¼Œè¯´åˆ°æ•™å…»å­©å­ï¼Œé’Ÿæ¬£å‡Œè¡¨ç¤ºè‡ªå·±å¯æ˜¯â€œè®°å–æ•™è®­â€ä¸”è·Ÿä¸Šæ—¶ä»£è„šæ­¥çš„å¦ˆå¦ˆã€‚â€œå›žæƒ³èµ·å°æ—¶å€™å­¦æ ¡è€å¸ˆä¼šé’ˆå¯¹è¡¨çŽ°å¥½çš„å­¦ç”Ÿç»™äºˆè´´çº¸ä½œä¸ºå¥–åŠ±â€ï¼Œå¥¹ä¹Ÿè¿˜è®°å¾—ï¼Œå°æ—¶å€™çš„è‡ªå·±å¾ˆæ¸´æœ›èŽ·å¾—è‚¯å®šï¼Œæœé›†è€å¸ˆç»™çš„â€œè´´çº¸â€å°±æ˜¯å¥¹æœ€å¤§çš„æˆå°±æ„Ÿã€‚</p>
+<p>è™½ç„¶æœ‰äººåå¯¹ç”µè§†å„¿ç«¥ï¼Œä½†å¥¹è®¤ä¸ºé€‰æ‹©ä¼˜è´¨çš„æ•™å…»èŠ‚ç›®æ¥ååŠ©æ•™è‚²å­©å­æ˜¯ä¸ªå¥½æ–¹æ³•ã€‚å¥¹åˆ†äº«è‡ªå·±å¹³æ—¶è·Ÿå­©å­ä¸€èµ·æ”¶çœ‹å„¿ç«¥èŠ‚ç›®ã€Š<ahref="https://github.com/tcgkzq3248/djy/blob/master/gb/tag/%E9%98%BF%E5%A5%87%E5%B9%BC%E5%B9%BC%E5%9B%AD.md#1">é˜¿å¥‡å¹¼å¹¼å›­</a>ã€‹ï¼Œç¬‘è¯´ï¼šâ€œæœ‰äº›äº‹æƒ…æˆ‘è¯´æ˜Žèµ·æ¥å°±å¾ˆå¤æ‚ï¼Œä½†å¥¹ä»¬èŠ±ä¸€ç‚¹æ—¶é—´çœ‹å®ŒèŠ‚ç›®å°±ç«‹åˆ»æ‡‚äº†ï¼Œè¿™æ ·ä¸æ˜¯å¾ˆå¥½å—ï¼Ÿè€Œä¸”è·Ÿç€ä¸€èµ·çœ‹ä¹Ÿå¾ˆæœ‰æ”¶èŽ·ï¼Œå¥¹ä»¬åœ¨å­¦ä¹ ï¼Œæˆ‘æ˜¯æ²‰æµ¸è‹±æ–‡çš„ä¸–ç•Œé‡Œï¼Œä¹Ÿæ˜¯æ»¡æµªæ¼«çš„å•Šï¼â€</p>
+<p>ã€Š<ahref="https://github.com/tcgkzq3248/djy/blob/master/gb/tag/%E9%98%BF%E5%A5%87%E5%B9%BC%E5%B9%BC%E5%9B%AD.md#1">é˜¿å¥‡å¹¼å¹¼å›­</a>ã€‹ï¼ˆHEY DUGGEEï¼‰ä¸ºè‹±å›½BBCæ——ä¸‹å„¿ç«¥é¢‘é“CBeebiesæŽ¨å‡ºçš„å„¿ç«¥èŠ‚ç›®ï¼Œå¯“æ•™äºŽä¹çš„æœ‰è¶£å†…å®¹ï¼Œé¼“åŠ±å°æœ‹å‹é€è¿‡ä¸åŒæ–¹å¼ä¸»åŠ¨è§£å†³é—®é¢˜ï¼Œå°¤å…¶èŠ‚ç›®æœ€åŽï¼Œé˜¿å¥‡å›­é•¿éƒ½ä¼šé€å‡ºå‹‹ç« ç»™å¹¼å¹¼å›­çš„å¥½å¥‡å®å®ä»¬ï¼Œè¿™è®©é’Ÿæ¬£å‡Œå—åˆ°å¯å‘è¡¨ç¤ºï¼Œâ€œåŽŸæ¥é™¤äº†é€è´´çº¸å¤–ï¼Œè¿˜å¯ä»¥é€å„ç§â€˜æˆå°±å‹‹ç« â€™ä½œä¸ºå¥–åŠ±ï¼â€</p>
+<p>ä¸ºäº†è·Ÿæ›´å¤šçˆ¶æ¯åˆ†äº«å¥¹çš„æ•™å…»å¿ƒæ³•ï¼Œé’Ÿæ¬£å‡Œ7æ—¥åœ¨ã€Šé˜¿å¥‡å¹¼å¹¼å›­ã€‹äº”å²ç”Ÿæ—¥è§é¢ä¼šä¸ŠæŽ¥å—â€œé˜¿å¥‡å›­é•¿â€çš„é¢è¯•ï¼ŒæŒ‘æˆ˜æ‹…ä»»ä¸€æ—¥å¹¼å¹¼å›­è€å¸ˆã€‚å¥¹ä¸ä»…é«˜åˆ†é€šè¿‡æµ‹è¯•ï¼Œè¿˜å¸¦é¢†å°æœ‹å‹é€šè¿‡è€ƒéªŒã€èŽ·å¾—å‹‹ç« ã€‚</p>
+<figure id="attachment_11710094" style="width: 458px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2019/12/1912090106371487.jpg"><img class=" wp-image-11710094" title="" src="https://i.epochtimes.com/assets/uploads/2019/12/1912090106371487.jpg" alt="" width="458" b="667" /></a><figcaption class="wp-caption-text">é’Ÿæ¬£å‡ŒäºŽ12æœˆ7æ—¥åœ¨å„¿ç«¥èŠ‚ç›®ã€Šé˜¿å¥‡å¹¼å¹¼å›­ã€‹äº”å²ç”Ÿæ—¥è§é¢ä¼šä¸ŠæŽ¥å—â€œé˜¿å¥‡å›­é•¿â€çš„é¢è¯•ï¼ŒæŒ‘æˆ˜æ‹…ä»»ä¸€æ—¥å¹¼å¹¼å›­è€å¸ˆã€‚ï¼ˆé½çŸ³ä¼ æ’­æä¾›ï¼‰</figcaption></figure>
+<p>å½“æ—¥æ´»åŠ¨çŽ°åœºçš„çˆ¸å¦ˆä»¬éƒ½è¡¨ç¤ºï¼Œå¹³å¸¸åœ¨å®¶éƒ½è¦è·Ÿå­©å­æ–—æ³•ã€èŠ±è´¹è‹¦å¿ƒå¼•å¯¼å­¦ä¹ ï¼Œæ²¡æƒ³åˆ°é’Ÿæ¬£å‡Œç«Ÿç„¶ä¸€ä¸‹å°±å¾æœå­©å­ï¼Œæ‡‚å¾—å¦‚ä½•ä¸Žè‡ªå·±çš„å°å­©ç›¸å¤„ï¼Œæ ¹æœ¬æ˜¯â€œè¢«æ¼”å‘˜è€½è¯¯çš„<ahref="https://github.com/tcgkzq3248/djy/blob/master/gb/tag/%E5%9B%BD%E6%B0%91%E5%A6%88%E5%A6%88.md#1">å›½æ°‘å¦ˆå¦ˆ</a>â€ã€‚</p>
+<p>è´£ä»»ç¼–è¾‘ï¼šæ¢æ¢¦ç«¹</p>
 <p>&nbsp;</p>
-
+	
 <hr>
 
-#### ±¾ÎÄ×ª×Ô<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>£¨¹úÄÚÐèÓÃ<a href="https://git.io/JesJV">·­Ç½Èí¼þ</a>²ÅÄÜ·ÃÎÊ£©
-> Ô­ÎÄ£º<a href="http://www.epochtimes.com/gb/19/12/9/n11709977.htm">¸ßÁä½ÌÑøº¢×ÓÀÛÈË ÖÓÐÀÁè·ÖÏíÁ½´óÊØÔò</a>
 
-
-#### ÏÂÔØ<a href="https://git.io/JesJV">·­Ç½Èí¼þ</a>ä¯ÀÀ<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>Ïà¹ØÐÂÎÅ£º
-> <li><a href="http://www.epochtimes.com/gb/19/10/9/n11578053.htm">ÖÓÐÀÁèÇÃÏì½ðÖÓºó ÏÂ²¿Ï·½«ÓëÍõÉÙÎ°ÑÝÄ¸×Ó</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/3/29/n11149091.htm">ÓëÑîð©ÈçÁÄÓý¶ù ÖÓÐÀÁèÌ¾µ±»¢Âè·òÆÞ³£Ê§ºÍ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/18/10/30/n10818212.htm">ÌôÕ½¿ÕÖÐè¤çì ÖÓÐÀÁèÓëÐ¡ìõÏ·ÖÐÐ¦ÁÏ²»¶Ï</a></li>
-> <li><a href="http://www.epochtimes.com/gb/18/7/5/n10539361.htm">ÖÓÐÀÁè¸ÐÐÔÓý¶ù£º¸¸Ä¸²»ÊÇ×îºÃµ«×îÅ¬Á¦</a></li>
-> <li><a href="http://www.epochtimes.com/gb/18/7/2/n10530980.htm">Íò·¼¿ª³ª´ßÀá ÖÓÐÀÁè¿Þµ½¿ìÖÐ·ç</a></li>
-> <li><a href="http://www.epochtimes.com/gb/17/11/15/n9844060.htm">ÖÓÐÀÁè±»ÊÚºåË¯ÃÜ¼¼Ð§¹ûÆæ¼Ñ Ö±ºô£º³öÔËÁË£¡</a></li>
-
-#### ÏÂÔØ<a href="https://git.io/JesJV">·­Ç½Èí¼þ</a>ä¯ÀÀ<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>ÈÈÃÅÐÂÎÅ£º
-> <li><a href="http://www.epochtimes.com/gb/19/12/6/n11706387.htm">¡¾Ö±²¥»Ø·Å¡¿12.8¹ú¼ÊÈËÈ¨ÈÕ 80ÍòÈË´óÓÎÐÐ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/8/n11707970.htm">¡¾·­Ç½±Ø¿´¡¿»ªÎªÏÊÎªÈËÖªµÄÄÚ²¿ÔË×÷ÃØÃÜ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/8/n11708540.htm">×éÍ¼:80ÍòÈËÓÎÐÐ º°¡°Çý³ý¹²µ³ »¹ÎÒÏã¸Û¡±</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/8/n11708917.htm">ÓáÇ¿Éù³öÌÓ ´«ÓëÆä¸¸±»Ã«Ôó¶«»î»îÏÅËÀÓÐ¹Ø</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/26/n11682462.htm">ÔÚ´óÊÇ´ó·ÇÃæÇ° Ã»ÓÐÖÐÁ¢</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/1/n11693210.htm">¡°ÈýÊÀÒò¹û¡±ÉÆ¶ñÓÐ±¨ ÎªºÎÓÐÊ±¿´²»µ½¹û±¨£¿</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/25/n11679911.htm">ÆæÃÎÔ¤Õ×£º¸ÄÃûéóÊÂ ×ªÊÀÆæÎÅ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/28/n11688048.htm">Ãñ¹ú¾ü·§¼ûÖ¤Ææ¼££ºÄº´ºÆíÑ© ÈËÌå×Ô»¯</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/6/n11706258.htm">´óÏ·°æ¡¶Ô¸ÈÙ¹â¡·³öÂ¯ ´´×÷Õß£ºÒÔÔÁ¾ç¾ÛÈËÐÄ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/6/n11706422.htm">¸ßÒÔÏèÖèÊÅÊÂ¼þ ½ÚÄ¿·½Öí¶ÓÓÑ·¢ÎÄÈÇÅ­ÍøÓÑ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/6/n11705012.htm">YouTubeÄê¶ÈÈÈÃÅMVÅÅÐÐ ËÄ×éº«ÍÅ±íÏÖÁÁÑÛ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/6/n11706089.htm">ÁôÑ§ÈðÊ¿¿¼¾í¼¸ºõÈ«Áô°× ÀîæÌ×ÔÌ¾ÓëÊýÑ§ÎÞÔµ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/6/n11705560.htm">ÍïÏ§¸ßÒÔÏèâ§ÊÅ ÀÏÏôÆØ¡¶×·ÎÒ°É¡·Î£ÏÕÄÚÄ»</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/31/n11624954.htm">¡¾Èý¹úÓ¢ÐÛ¡¿Ö®ËÄ£ºÌìÏÂ´óÂÒ£¨ÎÄ×Ö°æ£©</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/8/n11707833.htm">¡¾Ë¼ÏëÁìÐä¡¿»Æ¹úÍ©£º¸Û¾¯×èÂÉÊ¦¼û±»²¶Õß</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/9/n11643661.htm">¡¾Ë¼ÏëÁìÐä¡¿Ïã¸Û¿¹ÒéÊÇ¡°ÐÂÀäÕ½¡±Ç°Ïß£¨ÏÂ£©</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/6/n11705858.htm">ÃÀÖÐ¹ØÏµ¿ìËÙ¶ñ»¯ Ñ§Õß£ºÐÂÀäÕ½ÒÑ¿ªÊ¼</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/7/n11707638.htm">¡¾ÐÂÎÅ¿´µã¡¿±±¾©½ÓÊÜGDP±£4Õù5£¿¾­¼ÃÓÐ¶àÔã</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/6/n11706470.htm">ÖÐ¹úÆû³µÏúÊÛ³ÖÐøµÍÃÔ Íâ×Ê³µÆó·×Àë³¡</a></li>
+<strong>ç›¸å…³æ–°é—»ï¼š</strong>
+<li><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/17/11/15/n9844060.md#1">é’Ÿæ¬£å‡Œè¢«æŽˆå“„ç¡å¯†æŠ€æ•ˆæžœå¥‡ä½³ ç›´å‘¼ï¼šå‡ºè¿äº†ï¼</a></li>
+<li><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/18/7/2/n10530980.md#1">ä¸‡èŠ³å¼€å”±å‚¬æ³ª é’Ÿæ¬£å‡Œå“­åˆ°å¿«ä¸­é£Ž</a></li>
+<li><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/18/7/5/n10539361.md#1">é’Ÿæ¬£å‡Œæ„Ÿæ€§è‚²å„¿ï¼šçˆ¶æ¯ä¸æ˜¯æœ€å¥½ä½†æœ€åŠªåŠ›</a></li>
+<li><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/18/10/30/n10818212.md#1">æŒ‘æˆ˜ç©ºä¸­ç‘œçˆ é’Ÿæ¬£å‡Œä¸Žå°ç¥¯æˆä¸­ç¬‘æ–™ä¸æ–­</a></li>
 <hr>
 
-#### ÊÖ»úÉÏ³¤°´²¢¸´ÖÆÏÂÃæ¶þÎ¬Âë·ÖÏí±¾ÎÄÕÂ£º<br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/rywys229/djy/blob/master/gb/19/12/9/n11709977.md%231" title="·ÖÏí±¾ÎÄÕÂ"></td><td VALIGN=TOP><a href="https://github.com/rywys229/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rywys229/djy/master/gb/300/wei-f1.jpg" title="ÖÐ¹²µÄÎ±»ðÆ­¾Ö"  alt="ÖÐ¹²µÄÎ±»ðÆ­¾Ö"></a><br><a href="https://github.com/rywys229/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/rywys229/djy/master/gb/300/yong-h.jpg" title="ÓÀºãµÄ¼ûÖ¤"  alt="ÓÀºãµÄ¼ûÖ¤"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rywys229/djy/master/gb/300/shang-lnz.jpg" title="ÉÆÁ¼Å®×Ó±»ÖÐ¹²Í¶ÄÐÀÎ"  alt="ÉÆÁ¼Å®×Ó±»ÖÐ¹²Í¶ÄÐÀÎ"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rywys229/djy/master/gb/300/huo-z3.jpg" title="¾¯ÎÀÄ¿»÷»îÕªÆ÷¹Ù"  alt="¾¯ÎÀÄ¿»÷»îÕªÆ÷¹Ù"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rywys229/djy/master/gb/300/huo-z4.jpg" title="Ö¤ÈËÃèÊö»îÕª¿Ö²À"  alt="Ö¤ÈËÃèÊö»îÕª¿Ö²À"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rywys229/djy/master/gb/300/huo-z1.jpg" title="½Ò¿ª»îÕªÆ÷¹ÙºÚÄ»"  alt="½Ò¿ª»îÕªÆ÷¹ÙºÚÄ»"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rywys229/djy/master/gb/300/ma-ks.jpg" title="Âí¿ËË¼µÄ³ÉÄ§Ö®Â·"  alt="Âí¿ËË¼µÄ³ÉÄ§Ö®Â·"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rywys229/djy/master/gb/300/chang-zs.jpg" title="²Ø×ÖÊ¯ ÔÌÌì»ú"  alt="²Ø×ÖÊ¯ ÔÌÌì»ú"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rywys229/djy/master/gb/300/st1.jpg" title="¹Ø×¢3ÒÚÈËÈýÍË"  alt="¹Ø×¢3ÒÚÈËÈýÍË"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rywys229/djy/master/gb/300/jie-t.jpg" title="½âÌåÖÐ¹²¸´ÐËÖÐ»ª"  alt="½âÌåÖÐ¹²¸´ÐËÖÐ»ª"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rywys229/djy/master/gb/300/gao-zs.jpg" title="ÖÐ¹²ÆÈº¦Á¼ÐÄÂÉÊ¦"  alt="ÖÐ¹²ÆÈº¦Á¼ÐÄÂÉÊ¦"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rywys229/djy/master/gb/300/sj1.jpg" title="303ÍòÈË¾Ù±¨½­ÔóÃñ"  alt="303ÍòÈË¾Ù±¨½­ÔóÃñ"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rywys229/djy/master/gb/300/sj2.jpg" title="ÕâÐ©¹ÙÔ±ÎªºÎÆðËß½­ÔóÃñ"  alt="ÕâÐ©¹ÙÔ±ÎªºÎÆðËß½­ÔóÃñ"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rywys229/djy/master/gb/300/liangan.jpg" title="º£Ï¿Á½°¶µÄÇ¿ÁÒ¶Ô±È"  alt="º£Ï¿Á½°¶µÄÇ¿ÁÒ¶Ô±È"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rywys229/djy/master/gb/300/jia-ndzl.jpg" title="¼ÓÄÃ´ó×ÜÀíµÄºØÐÅ"  alt="¼ÓÄÃ´ó×ÜÀíµÄºØÐÅ"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rywys229/djy/master/gb/300/xiao-wd.jpg" title="Ì½Ñ°ÕæÏà¼æÌýÔòÃ÷"  alt="Ì½Ñ°ÕæÏà¼æÌýÔòÃ÷"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rywys229/djy/master/gb/300/yindu.jpg" title="Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½"  alt="Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rywys229/djy/master/gb/300/xie-j.jpg" title="²»Ò»ÑùµÄº£ÍâÐ£Ô°"  alt="²»Ò»ÑùµÄº£ÍâÐ£Ô°"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rywys229/djy/master/gb/300/li-up.jpg" title="´Ó´óÊ¦µ½Í½µÜµÄ´«Ææ"  alt="´Ó´óÊ¦µ½Í½µÜµÄ´«Ææ"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rywys229/djy/master/gb/300/zfl2.jpg" title="ÒÚÍòÈËÓë¶«·½Ò»±¾ÆæÊé"  alt="ÒÚÍòÈËÓë¶«·½Ò»±¾ÆæÊé"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rywys229/djy/master/gb/300/zhen-h.jpg" title="´óÂ½¼û²»µ½µÄÕðº³³¡Ãæ"  alt="´óÂ½¼û²»µ½µÄÕðº³³¡Ãæ"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rywys229/djy/master/gb/300/dalu-sk.jpg" title="ÈËÐÄÏòÉÆ ´óÂ½µ±³õÊ¢¿ö"  alt="ÈËÐÄÏòÉÆ ´óÂ½µ±³õÊ¢¿ö"></a><br><a href="https://github.com/rywys229/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rywys229/djy/master/gb/300/zfl1.jpg" title="×·Ñ°ÕæÀí ÕâÊé½²Ê²Ã´"  alt="×·Ñ°ÕæÀí ÕâÊé½²Ê²Ã´"></a><br><a href="https://github.com/rywys229/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rywys229/djy/master/gb/300/fq1.jpg" title="ÏÂÔØÃâ·Ñ·­Ç½Èí¼þ"  alt="ÏÂÔØÃâ·Ñ·­Ç½Èí¼þ"></a><br></td></tr></table>
+
+<strong>ç¼–è¾‘æŽ¨èï¼š</strong>
+<li><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank">è¿½å¯»çœŸç† è¿™ä¹¦è®²ä»€ä¹ˆ</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/11/n10048859.md#1" target="_blank">ã€Šè‹¦èœèŠ±ã€‹äººç‰©åŽŸåž‹çš„çœŸå®žäººç”Ÿï¼ˆ5ï¼‰</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/12/10/18/n3709213.md#1" target="_blank">åœ¨ä¸œæ–¹å¥åº·åšè§ˆä¼šä¸Šè§åˆ°æŽæ´ªå¿—å¸ˆçˆ¶</a></li>
+<hr>
+
+<strong>çƒ­é—¨æ–°é—»ï¼š</strong>
+<li><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/21/2/22/n12767168.md#1">è¾›ä¸‘å…«å¦2021å¹´ä¸¤å²¸å›½è¿</a></li>
+<li><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/20/12/30/n12653772.md#1">ã€å‘½ç†ã€‘ç›¸å£«ç®—ä»–æ´»ä¸è¿‡30å² ä¸ºä½•ä¸åº”éªŒï¼Ÿ</a></li>
+<li><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/21/2/21/n12765804.md#1">é¢„è¨€ä¸­çš„å¤§ç˜Ÿç–«å’Œä¸­å›½å˜å±€</a></li>
+<li><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/21/2/21/n12765309.md#1">å¥³å­æ¿’æ­»æ¸¸å¤©å ‚ è¢«å‘ŠçŸ¥æ—¶è¾°æœªåˆ°å¹¶èµ¶å›žäººé—´</a></li>
+<li><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/21/1/24/n12709238.md#1">æ— è§£çš„äººä½“ä¹‹è°œ ä¸ºä½•ä¿®è¡Œè€…çš„è‚‰èº«ä¸è…</a></li>
+<li><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/15/12/20/n4600383.md#1">æ•£æ–‡ï¼šè¯»ã€ˆå¤©å°äºŒå¥³ã€‰</a></li>
+<li><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/21/2/25/n12775571.md#1">ã€ç›´æ’­é¢„å‘Šã€‘2021ä¿å®ˆæ´¾å¤§ä¼šé¦–æ—¥ æ”¿è¦å‘è¨€</a></li>
+<li><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/21/2/25/n12774955.md#1">ã€æ–°é—»å¤§å®¶è°ˆã€‘ä¸¤æš—æ¡© ç¾Žå›½ä¼šè­¦é•¿æ›æ‚²å‰§å†…å¹•</a></li>
+<li><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/21/2/23/n12770771.md#1">ä¸­å›½äººå¯¿è´ªè…ä¸¥é‡ å¥³å‘˜å·¥ä¸¾æŠ¥é­æŠ¥å¤</a></li>
+<li><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/21/2/23/n12770213.md#1">è´¾åº†æž—å®¶æ—è…è´¥å†…å¹•å†è¢«æ‘†ä¸Šå°é¢</a></li>
+<li><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/21/2/24/n12772903.md#1">å¤§é™†â€œä¼šè®¡æ‰€ä¸€å“¥â€æ¿’ä¸´å€’é—­ äººåŽ»æ¥¼ç©º</a></li>
+<li><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/21/2/25/n12774018.md#1">æŽç¿Šå›åœ¨å®¶ä¸æ…Žæ»‘å€’ è„¸é­é‡å‡»â€œæ•´ç‰‡å‘é»‘â€</a></li>
+<li><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/21/2/24/n12773132.md#1">å­™ä¿ªèŽ·å¥½å‹èµ äºŒæ‰‹ç«¥è£… å°èŠ±çœŸå®žååº”æ„ŸåŠ¨ç½‘å‹</a></li>
+<li><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/21/2/23/n12770447.md#1">å´å­Ÿè¾¾é­è°£ä¼ ç½¹ç™ŒåŽ»ä¸– å‹äººç”°å¯æ–‡æ–¥é™†åª’ç¼ºå¾·</a></li>
+<li><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/21/2/25/n12775727.md#1">é™†ç»¼å°†èµ›ç³å¨œæ¢è‚¾æ‰‹æœ¯ç…§På›¾ ç½‘å‹æ€’æ–¥æ— åº•çº¿</a></li>
+<li><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/21/2/24/n12771557.md#1">â€œ97â€æ‰‹é•¯æœ‰è°¦æ¯å¤©æˆ´ è½¦é“¶ä¼˜BTSæŸ¾å›½ç­‰äººåˆé€</a></li>
+<li><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/21/2/24/n12772677.md#1">9ç§é£Ÿç‰©æ˜¯â€œå¤©ç„¶è‚ èƒƒè¯â€ æ”¹å–„èƒƒé£Ÿé“é€†æµ</a></li>
+<li><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/21/2/23/n12768699.md#1">ç¼ºä¹ç»´ç”Ÿç´ Dæ˜“æ„ŸæŸ“æ–°å†  1æ‹›è¡¥å……æœ€å¿«</a></li>
+<li><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/21/2/23/n12770063.md#1">æ˜¥å¤©æ˜¯è½»æ¾å‡è‚¥å’ŒæŽ’æ¯’çš„ç»ä½³æ—¶æœº</a></li>
+<li><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/21/2/25/n12774299.md#1">ç½‘çº¢ç§°é‡å¤åšå¥‡æ€ªçš„æ¢¦ æˆ–è§£å‰ä¸–æ­»å› </a></li>
+<hr>
+
+<strong>æœ¬æ–‡è½¬è‡ª<a href="https://www.epochtimes.com">å¤§çºªå…ƒ</a>ï¼ˆå›½å†…éœ€ç”¨<a href="https://github.com/tcgkzq3248/www/blob/master/README.md#8">ç¿»å¢™è½¯ä»¶</a>æ‰èƒ½è®¿é—®ï¼‰</strong><p>ä¸‹è½½<a href="https://github.com/tcgkzq3248/www/blob/master/README.md#8">ç¿»å¢™è½¯ä»¶</a>æµè§ˆåŽŸæ–‡ï¼š<a href="https://www.epochtimes.com/gb/19/12/9/n11709977.htm">é«˜é¾„æ•™å…»å­©å­ç´¯äºº é’Ÿæ¬£å‡Œåˆ†äº«ä¸¤å¤§å®ˆåˆ™</a></p><hr>
+
+<strong>æ‰‹æœºä¸Šé•¿æŒ‰å¹¶å¤åˆ¶ä¸‹é¢äºŒç»´ç åˆ†äº«æœ¬æ–‡ç« ï¼š</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/tcgkzq3248/djy/blob/master/gb/19/12/9/n11709977.md%231" title="åˆ†äº«æœ¬æ–‡ç« "></td><td VALIGN=TOP><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tcgkzq3248/djy/master/gb/300/wei-f1.jpg" title="ä¸­å…±çš„ä¼ªç«éª—å±€"  alt="ä¸­å…±çš„ä¼ªç«éª—å±€"></a><br><a href="https://github.com/tcgkzq3248/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/tcgkzq3248/djy/master/gb/300/yong-h.jpg" title="æ°¸æ’çš„è§è¯"  alt="æ°¸æ’çš„è§è¯"></a><br><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tcgkzq3248/djy/master/gb/300/shang-lnz.jpg" title="å–„è‰¯å¥³å­è¢«ä¸­å…±æŠ•ç”·ç‰¢"  alt="å–„è‰¯å¥³å­è¢«ä¸­å…±æŠ•ç”·ç‰¢"></a><br><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tcgkzq3248/djy/master/gb/300/huo-z3.jpg" title="è­¦å«ç›®å‡»æ´»æ‘˜å™¨å®˜"  alt="è­¦å«ç›®å‡»æ´»æ‘˜å™¨å®˜"></a><br><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tcgkzq3248/djy/master/gb/300/huo-z4.jpg" title="è¯äººæè¿°æ´»æ‘˜ææ€–"  alt="è¯äººæè¿°æ´»æ‘˜ææ€–"></a><br><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tcgkzq3248/djy/master/gb/300/huo-z1.jpg" title="æ­å¼€æ´»æ‘˜å™¨å®˜é»‘å¹•"  alt="æ­å¼€æ´»æ‘˜å™¨å®˜é»‘å¹•"></a><br><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tcgkzq3248/djy/master/gb/300/ma-ks.jpg" title="é©¬å…‹æ€çš„æˆé­”ä¹‹è·¯"  alt="é©¬å…‹æ€çš„æˆé­”ä¹‹è·¯"></a><br><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tcgkzq3248/djy/master/gb/300/chang-zs.jpg" title="è—å­—çŸ³ è•´å¤©æœº"  alt="è—å­—çŸ³ è•´å¤©æœº"></a><br><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tcgkzq3248/djy/master/gb/300/st1.jpg" title="å…³æ³¨3äº¿äººä¸‰é€€"  alt="å…³æ³¨3äº¿äººä¸‰é€€"></a><br><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tcgkzq3248/djy/master/gb/300/jie-t.jpg" title="è§£ä½“ä¸­å…±å¤å…´ä¸­åŽ"  alt="è§£ä½“ä¸­å…±å¤å…´ä¸­åŽ"></a><br><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tcgkzq3248/djy/master/gb/300/gao-zs.jpg" title="ä¸­å…±è¿«å®³è‰¯å¿ƒå¾‹å¸ˆ"  alt="ä¸­å…±è¿«å®³è‰¯å¿ƒå¾‹å¸ˆ"></a><br><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tcgkzq3248/djy/master/gb/300/sj1.jpg" title="303ä¸‡äººä¸¾æŠ¥æ±Ÿæ³½æ°‘"  alt="303ä¸‡äººä¸¾æŠ¥æ±Ÿæ³½æ°‘"></a><br><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tcgkzq3248/djy/master/gb/300/sj2.jpg" title="è¿™äº›å®˜å‘˜ä¸ºä½•èµ·è¯‰æ±Ÿæ³½æ°‘"  alt="è¿™äº›å®˜å‘˜ä¸ºä½•èµ·è¯‰æ±Ÿæ³½æ°‘"></a><br><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tcgkzq3248/djy/master/gb/300/liangan.jpg" title="æµ·å³¡ä¸¤å²¸çš„å¼ºçƒˆå¯¹æ¯”"  alt="æµ·å³¡ä¸¤å²¸çš„å¼ºçƒˆå¯¹æ¯”"></a><br><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tcgkzq3248/djy/master/gb/300/jia-ndzl.jpg" title="åŠ æ‹¿å¤§æ€»ç†çš„è´ºä¿¡"  alt="åŠ æ‹¿å¤§æ€»ç†çš„è´ºä¿¡"></a><br><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tcgkzq3248/djy/master/gb/300/xiao-wd.jpg" title="æŽ¢å¯»çœŸç›¸å…¼å¬åˆ™æ˜Ž"  alt="æŽ¢å¯»çœŸç›¸å…¼å¬åˆ™æ˜Ž"></a><br><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tcgkzq3248/djy/master/gb/300/yindu.jpg" title="å°åº¦åª’ä½“æŠ¥é“ä¸œæ–¹"  alt="å°åº¦åª’ä½“æŠ¥é“ä¸œæ–¹"></a><br><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tcgkzq3248/djy/master/gb/300/xie-j.jpg" title="ä¸ä¸€æ ·çš„æµ·å¤–æ ¡å›­"  alt="ä¸ä¸€æ ·çš„æµ·å¤–æ ¡å›­"></a><br><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tcgkzq3248/djy/master/gb/300/li-up.jpg" title="ä»Žå¤§å¸ˆåˆ°å¾’å¼Ÿçš„ä¼ å¥‡"  alt="ä»Žå¤§å¸ˆåˆ°å¾’å¼Ÿçš„ä¼ å¥‡"></a><br><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tcgkzq3248/djy/master/gb/300/zfl2.jpg" title="äº¿ä¸‡äººä¸Žä¸œæ–¹ä¸€æœ¬å¥‡ä¹¦"  alt="äº¿ä¸‡äººä¸Žä¸œæ–¹ä¸€æœ¬å¥‡ä¹¦"></a><br><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tcgkzq3248/djy/master/gb/300/zhen-h.jpg" title="å¤§é™†è§ä¸åˆ°çš„éœ‡æ’¼åœºé¢"  alt="å¤§é™†è§ä¸åˆ°çš„éœ‡æ’¼åœºé¢"></a><br><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tcgkzq3248/djy/master/gb/300/dalu-sk.jpg" title="äººå¿ƒå‘å–„ å¤§é™†å½“åˆç››å†µ"  alt="äººå¿ƒå‘å–„ å¤§é™†å½“åˆç››å†µ"></a><br><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tcgkzq3248/djy/master/gb/300/zfl1.jpg" title="è¿½å¯»çœŸç† è¿™ä¹¦è®²ä»€ä¹ˆ"  alt="è¿½å¯»çœŸç† è¿™ä¹¦è®²ä»€ä¹ˆ"></a><br><a href="https://github.com/tcgkzq3248/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tcgkzq3248/djy/master/gb/300/fq1.jpg" title="ä¸‹è½½å…è´¹ç¿»å¢™è½¯ä»¶"  alt="ä¸‹è½½å…è´¹ç¿»å¢™è½¯ä»¶"></a><br></td></tr></table>
