--- a/gb/nsc1002.md
+++ b/gb/nsc1002.md
@@ -24,7 +24,7 @@
 <h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/25/n12773740.md#1" target="_blank">【重播】春季防疫攻略 家用食材发挥大功效</a><br></h3>
 <h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/25/n12774871.md#1" target="_blank">生活充满不确定性 在混乱中学会放松</a><br></h3>
 <h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/25/n12775179.md#1" target="_blank">视力半个月好转 菊花养肝明目 1配方消除飞蚊症</a><br></h3>
-<h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/25/n12775549.md#1" target="_blank">睡眠提升疫苗效力？专家：晚上睡好觉 躺着就防疫</a><br></h3>
+<h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/25/n12775549.md#1" target="_blank">躺着就防疫！专家：晚上睡好觉增强疫苗效力</a><br></h3>
 <h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/25/n12775614.md#1" target="_blank">【慧聊养生】一咳嗽就漏尿 提肛术止漏回春</a><br></h3>
 <h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/26/n12776343.md#1" target="_blank">【直播】6大原因 易感染新冠病毒</a><br></h3>
 <tr><td><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/nsc1002.md#1">上一页</a>&nbsp;&nbsp;1 &nbsp;&nbsp;<a href="https://github.com/yrsmsb310/djy/blob/master/gb/nsc1002_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/yrsmsb310/djy/blob/master/gb/nsc1002_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/yrsmsb310/djy/blob/master/gb/nsc1002_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/yrsmsb310/djy/blob/master/gb/nsc1002_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/yrsmsb310/djy/blob/master/gb/nsc1002_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/yrsmsb310/djy/blob/master/gb/nsc1002_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/yrsmsb310/djy/blob/master/gb/nsc1002_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/yrsmsb310/djy/blob/master/gb/nsc1002_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/yrsmsb310/djy/blob/master/gb/nsc1002_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/yrsmsb310/djy/blob/master/gb/nsc1002_2.md#1">下一页</a></h3></td></tr>
